Updating Old File for core commit d437e846e1242f2941b59fcdb712a8a31bedcbcd

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -4,9 +4,9 @@ description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
 source-git-commit: 067d816b3e9ce6bf9cc36f270cdf050a847bbcc8
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '668'
-ht-degree: 61%
+ht-degree: 100%
 
 ---
 
@@ -16,8 +16,8 @@ ht-degree: 61%
 
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
-| Dimension-Unterzeichenfolgen | Bietet mehrere Methoden zum Extrahieren des gewünschten Teils einer Zeichenfolge zur Verwendung als Dimensionselemente. Mit dieser Funktion können Sie eine Zeichenfolgendimension auch als Array behandeln, wenn die Zeichenfolge durch Trennzeichen getrennte Werte enthält. [Weitere Informationen](../data-views/component-settings/substring.md) | 20. April 2022 |
-| Datenvorbereitung für Analytics Source Connector | Die [Analytics Source Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de) ist jetzt in die [Datenvorbereitung](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html) Funktionen von Adobe Experience Platform. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem 100+ Data Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für Profile aktivieren.<p>CJA-Kunden, die mehrere Report Suites über Analytics Source Connector erfassen, können jetzt Spaltenunterschiede zwischen Report Suites aufheben. Wenn beispielsweise &quot;Suchbegriff&quot;in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite können Sie mithilfe der Datenvorbereitung die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
+| Dimensions-Teilzeichenfolgen | Bietet mehrere Methoden zum Extrahieren des gewünschten Teils einer Zeichenfolge zur Verwendung als Dimensionselemente. Mit dieser Funktion können Sie eine Zeichenfolgendimension auch als Array behandeln, wenn die Zeichenfolge durch Trennzeichen getrennte Werte enthält. [Weitere Informationen](../data-views/component-settings/substring.md) | 20. April 2022 |
+| Data Prep für den Analytics-Quell-Connector | Der [Analytics-Quell-Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de) ist jetzt in die [Datenvorbereitungsfunktionen](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html?lang=de) von Adobe Experience Platform integriert. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem über 100 Data-Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für ein Profil aktivieren.<p>CJA-Kunden, die mehrere Report Suites über den Analytics-Quell-Connector aufnehmen, können jetzt Spaltenunterschiede zwischen Report Suites beheben. Wenn beispielsweise „Suchbegriff“ in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite gespeichert ist, können Sie mithilfe von Data Prep die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -26,7 +26,7 @@ ht-degree: 61%
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
 | Anmerkungen in Analysis Workspace | Mit Anmerkungen in Analysis Workspace können Sie Ihrer Organisation kontextbezogene Informationen und Einblicke zu Daten effektiv übermitteln. [Weitere Informationen](/help/components/annotations/overview.md) | Der schrittweise Rollout beginnt am 23. März 2022 |
-| Landingpage für neue Customer Journey Analytics | Auf der Landingpage für Customer Journey Analytics finden Sie eine Startseite des Projektmanagers und einen Lernabschnitt, der Ihnen bei den ersten Schritten hilft. [Weitere Informationen](/help/getting-started/landing.md) | 1. April 2022 |
+| Neue Landingpage von Customer Journey Analytics | Auf der Landingpage für Customer Journey Analytics finden Sie eine Startseite für Projekt-Manager und einen Lernabschnitt, der Ihnen bei den ersten Schritten hilft. [Weitere Informationen](/help/getting-started/landing.md) | 1. April 2022 |
 | Analysis Workspace-Bedienfeld [!UICONTROL Nächstes Element] oder [!UICONTROL Vorheriges Element] | Das Bedienfeld [!UICONTROL Nächstes oder vorheriges Element] ermöglicht es Ihnen, Elemente zu untersuchen, die einem von Ihnen ausgewählten Dimensionselement folgen oder vorausgehen. Sie können es beispielsweise verwenden, wenn Sie die nächsten oder vorherigen Seiten zu einer bestimmten Produktseite, einem Marketing-Kanal oder sogar einem Gerätetyp anzeigen möchten. Dieses Bedienfeld geht über die alte nächste/vorherige Berichterstellung hinaus, da es Ihnen ermöglicht, eine beliebige Dimension anzuzeigen, wobei keine neue Implementierung erforderlich ist, um Einblicke zu erhalten. | 20. April 2022 |
 
 {style=&quot;table-layout:auto&quot;}
@@ -39,7 +39,7 @@ ht-degree: 61%
 
 | Funktion | Beschreibung | Zieldatum |
 | ----------- | ---------- | ----- |
-| Vorschaumodus für Mobile Scorecard-Projekte | Starten Sie direkt im Scorecard-Builder eine Vorschau Ihrer Mobile Scorecard, um zu sehen, wie sie in der Mobile App von Analytics-Dashboards aussehen wird. Im Vorschaumodus können Benutzer auf die gleiche Weise mit Filtern und Diagrammen interagieren wie in der Mobile App, sodass sie eine Vorschau des Erlebnisses erhalten, bevor sie die Scorecard speichern und freigeben. Benutzer können im Vorschaumodus auch die Geräteauswahl verwenden, um zu sehen, wie ihre Scorecard auf verschiedenen Geräten aussieht. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dashboards/create-scorecard.html#preview) | 16. Februar 2022 |
+| Vorschaumodus für Mobile Scorecard-Projekte | Starten Sie direkt im Scorecard-Builder eine Vorschau Ihrer Mobile Scorecard, um zu sehen, wie sie in der Mobile App von Analytics-Dashboards aussehen wird. Im Vorschaumodus können Benutzer auf die gleiche Weise mit Filtern und Diagrammen interagieren wie in der Mobile App, sodass sie eine Vorschau des Erlebnisses erhalten, bevor sie die Scorecard speichern und freigeben. Benutzer können im Vorschaumodus auch die Geräteauswahl verwenden, um zu sehen, wie ihre Scorecard auf verschiedenen Geräten aussieht. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dashboards/create-scorecard.html?lang=de#preview) | 16. Februar 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -47,8 +47,8 @@ ht-degree: 61%
 
 | Funktion | Beschreibung | Geplantes Datum |
 | ----------- | ---------- | ----- |
-| [!UICONTROL Persistenz]-Optionen für Binding-Dimensionen und Binding-Metriken | Beim Erstellen oder Bearbeiten einer Datenansicht können Sie die Persistenz einer Dimension an eine andere Dimension oder Metrik binden. Dieses Konzept wird als _Merchandising_ in Adobe Analytics und wird jetzt in CJA unterstützt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#binding-dimension) und [Anwendungsfall](/help/use-cases/binding-dimensions-metrics.md) | 19. Januar 2022 |
+| [!UICONTROL Persistenz]-Optionen für Binding-Dimensionen und Binding-Metriken | Beim Erstellen oder Bearbeiten einer Datenansicht können Sie die Persistenz einer Dimension an eine andere Dimension oder Metrik binden. Dieses Konzept wird in Adobe Analytics als _Merchandising_ bezeichnet. Es wird jetzt in Customer Journey Analytics unterstützt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#binding-dimension) und [Anwendungsfall](/help/use-cases/binding-dimensions-metrics.md) | 19. Januar 2022 |
 | Die Zuordnungsmodelle [!UICONTROL Erster bekannter] und [!UICONTROL Letzter bekannter] | Diese beiden neuen Zuordnungsmodelle nehmen den ersten oder letzten beobachteten Wert für eine Dimension innerhalb eines bestimmten Persistenzbereichs (Sitzung, Person oder benutzerspezifischer Zeitraum mit Rückblick). Anschließend wenden sie das Zuordnungsmodell auf alle Ereignisse im angegebenen Bereich an. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#allocation-settings) | 19. Januar 2022 |
-| [!UICONTROL PersonID] und [!UICONTROL PersonID-Namespace] als Dimensionen | Zeigt die `personID` (oder `customerID` bzw. die ID, die Sie zum Zusammenführen von Datensätzen in einer Verbindung verwenden) als Dimension in Datenansichten. Diese Verbesserung erleichtert Ihnen die Einbeziehung der `personID` als Dimension in Ihrer Datenansicht, indem Sie sie aus der Verbindung heranziehen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-reference.html#optional-standard-components) | 19. Januar 2022 |
+| [!UICONTROL PersonID] und [!UICONTROL PersonID-Namespace] als Dimensionen | Zeigt die `personID` (oder `customerID` bzw. die ID, die Sie zum Zusammenführen von Datensätzen in einer Verbindung verwenden) als Dimension in Datenansichten. Diese Verbesserung erleichtert Ihnen die Einbeziehung der `personID` als Dimension in Ihrer Datenansicht, indem Sie sie aus der Verbindung heranziehen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-reference.html?lang=de#optional-standard-components) | 19. Januar 2022 |
 
 {style=&quot;table-layout:auto&quot;}
