Updated by task 'AutomatedMDTask_1654900008230_TM-MT_1654900038041'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/b0e85f2b3845538e63008fa0eb104fc5fbb0680b

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -3,14 +3,23 @@ title: Versionshinweise zu Customer Journey Analytics für 2022 anzeigen
 description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
-source-git-commit: 067d816b3e9ce6bf9cc36f270cdf050a847bbcc8
-workflow-type: ht
-source-wordcount: '668'
-ht-degree: 100%
+source-git-commit: be6ad56b62b19bdd00c10af0aad4fd6096ced323
+workflow-type: tm+mt
+source-wordcount: '734'
+ht-degree: 99%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2022
+
+## Mai 2022
+
+| Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- |
+| Neue Benutzeroberfläche zum Bearbeiten und Erstellen von Verbindungen | Mit diesem optimierten Erlebnis können Sie Daten auf Datensatzebene aufstocken, ein rollierendes Fenster zur Datenaufbewahrung aktivieren sowie Datensätze zu einer Verbindung hinzufügen und daraus entfernen. [Weitere Informationen](/help/connections/create-connection.md) | 18. Mai 2022 |
+| Aktualisierungen zu Report Builder für CJA | Enthält Funktionen wie Planung und Datenblock-Manager. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-reportbuilder/manage-reportbuilder.html) | 18. Mai 2022 |
+
+{style=&quot;table-layout:auto&quot;}
 
 ## April 2022 {#apr22}
 
