Updated by task 'AutomatedMDTask_1657918865408_TM-MT_1657918896193'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/fc7454209f9857feec381c20d227c8cc0a78ed0b

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -3,21 +3,31 @@ title: Versionshinweise zu Customer Journey Analytics für 2022 anzeigen
 description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
-source-git-commit: be6ad56b62b19bdd00c10af0aad4fd6096ced323
+source-git-commit: e0f97c42f4b1bea721825a30360f0c44b1f9f85a
 workflow-type: tm+mt
-source-wordcount: '734'
-ht-degree: 99%
+source-wordcount: '834'
+ht-degree: 98%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2022
 
-## Mai 2022
+## Juni 2022 {#jun22}
+
+| Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- |
+| Neue Visualisierungen in der Flow-Benutzeroberfläche | Bietet zusätzliche Funktionen für unsere Flow-Visualisierung, um sie noch leistungsfähiger zu machen. [Weitere Informationen](/help/analysis-workspace/visualizations/c-flow/create-flow.md) | Rollout beginnt am 15. Juni 2022; Verfügbarkeit ab 27. Juni oder 28. Juni 2022 |
+| Analytics-Labs in CJA | Unterstützen Sie Labs in CJA, damit Sie Prototypen mit kanalübergreifenden Daten untersuchen können. [Weitere Informationen](/help/labs/labs.md) | 15. Juni 2022 |
+| Freigeben von Anmerkungen in Mobile-Scorecards | Sie können in Workspace erstellte Anmerkungen in mobilen Scorecards anzeigen. Auf diese Weise können Sie kontextbezogene Datennuancen und Erkenntnisse zu Ihrer Organisation und Ihren Kampagnen direkt in Projekten mit mobiler Scorecard, die in der Dashboard-Mobile-App von Analytics angezeigt werden. [Weitere Informationen](/help/components/annotations/mobile-annotations.md) | 15. Juni 2022 |
+
+{style=&quot;table-layout:auto&quot;}
+
+## Mai 2022 {#may22}
 
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
 | Neue Benutzeroberfläche zum Bearbeiten und Erstellen von Verbindungen | Mit diesem optimierten Erlebnis können Sie Daten auf Datensatzebene aufstocken, ein rollierendes Fenster zur Datenaufbewahrung aktivieren sowie Datensätze zu einer Verbindung hinzufügen und daraus entfernen. [Weitere Informationen](/help/connections/create-connection.md) | 18. Mai 2022 |
-| Aktualisierungen zu Report Builder für CJA | Enthält Funktionen wie Planung und Datenblock-Manager. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-reportbuilder/manage-reportbuilder.html) | 18. Mai 2022 |
+| Aktualisierungen zu Report Builder für CJA | Enthält Funktionen wie Planung und Datenblock-Manager. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-reportbuilder/manage-reportbuilder.html?lang=de) | 18. Mai 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
