Updated by task 'AutomatedMDTask_1658939912430_TM-MT_1658939914789'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/d3fcee22ba4d9310d7efcf0f4d68578f14e70dac

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -6,7 +6,7 @@ exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
 source-git-commit: e0f97c42f4b1bea721825a30360f0c44b1f9f85a
 workflow-type: tm+mt
 source-wordcount: '834'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -16,9 +16,9 @@ ht-degree: 98%
 
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
-| Neue Visualisierungen in der Flow-Benutzeroberfläche | Bietet zusätzliche Funktionen für unsere Flow-Visualisierung, um sie noch leistungsfähiger zu machen. [Weitere Informationen](/help/analysis-workspace/visualizations/c-flow/create-flow.md) | Rollout beginnt am 15. Juni 2022; Verfügbarkeit ab 27. Juni oder 28. Juni 2022 |
+| Neue Visualisierungen in der Fluss-Benutzeroberfläche | Bietet zusätzliche Funktionen für unsere Flow-Visualisierung, um sie noch leistungsfähiger zu machen. [Weitere Informationen](/help/analysis-workspace/visualizations/c-flow/create-flow.md) | Rollout beginnt am 15. Juni 2022; Verfügbarkeit ab 27. Juni oder 28. Juni 2022 |
 | Analytics-Labs in CJA | Unterstützen Sie Labs in CJA, damit Sie Prototypen mit kanalübergreifenden Daten untersuchen können. [Weitere Informationen](/help/labs/labs.md) | 15. Juni 2022 |
-| Freigeben von Anmerkungen in Mobile-Scorecards | Sie können in Workspace erstellte Anmerkungen in mobilen Scorecards anzeigen. Auf diese Weise können Sie kontextbezogene Datennuancen und Erkenntnisse zu Ihrer Organisation und Ihren Kampagnen direkt in Projekten mit mobiler Scorecard, die in der Dashboard-Mobile-App von Analytics angezeigt werden. [Weitere Informationen](/help/components/annotations/mobile-annotations.md) | 15. Juni 2022 |
+| Freigeben von Anmerkungen in mobilen Scorecards | Sie können in Workspace erstellte Anmerkungen in mobilen Scorecards anzeigen. Auf diese Weise können Sie kontextbezogene Datennuancen und Erkenntnisse zu Ihrer Organisation und Ihren Kampagnen direkt in Projekten mit mobiler Scorecard, die in der Dashboard-Mobile-App von Analytics angezeigt werden. [Weitere Informationen](/help/components/annotations/mobile-annotations.md) | 15. Juni 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -64,7 +64,7 @@ ht-degree: 98%
 
 ## Januar 2022 {#jan2022}
 
-| Funktion | Beschreibung | Geplantes Datum |
+| Funktion | Beschreibung | Zieldatum |
 | ----------- | ---------- | ----- |
 | [!UICONTROL Persistenz]-Optionen für Binding-Dimensionen und Binding-Metriken | Beim Erstellen oder Bearbeiten einer Datenansicht können Sie die Persistenz einer Dimension an eine andere Dimension oder Metrik binden. Dieses Konzept wird in Adobe Analytics als _Merchandising_ bezeichnet. Es wird jetzt in Customer Journey Analytics unterstützt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#binding-dimension) und [Anwendungsfall](/help/use-cases/binding-dimensions-metrics.md) | 19. Januar 2022 |
 | Die Zuordnungsmodelle [!UICONTROL Erster bekannter] und [!UICONTROL Letzter bekannter] | Diese beiden neuen Zuordnungsmodelle nehmen den ersten oder letzten beobachteten Wert für eine Dimension innerhalb eines bestimmten Persistenzbereichs (Sitzung, Person oder benutzerspezifischer Zeitraum mit Rückblick). Anschließend wenden sie das Zuordnungsmodell auf alle Ereignisse im angegebenen Bereich an. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#allocation-settings) | 19. Januar 2022 |
