Updating Old File for core commit d3fcee22ba4d9310d7efcf0f4d68578f14e70dac

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -4,7 +4,7 @@ description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
 source-git-commit: e0f97c42f4b1bea721825a30360f0c44b1f9f85a
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '834'
 ht-degree: 100%
 
