--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -4,9 +4,9 @@ description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
 source-git-commit: 98ff75d5d79f5d0722b5fe1449e22ae0af22fabf
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1707'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -18,9 +18,9 @@ ht-degree: 99%
 | ----------- | ---------- | ----- |
 | **Regionenübergreifende Unterstützung für Analytics Source Connector** | Sie können jetzt Berichts-Suites aus jeder Region (Vereinigte Staaten, Vereinigtes Königreich oder Singapur) einlesen. Diese Berichts-Suites müssen jedoch derselben Organisation zugeordnet sein wie die Experience Platform-Sandbox-Instanz, in der die Source-Verbindung erstellt wird. [Weitere Informationen](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de) | 24. August 2022 |
 | **Erste Sitzungsberichte** | Stellen Sie fest, ob es sich bei einer bestimmten Sitzung um die allererste Sitzung einer Person handelte. [Weitere Informationen](/help/data-views/data-views-usecases.md) | 24. August 2022 |
-| **Rückkehrsitzungsberichte** | Erfahren Sie, ob eine bestimmte Sitzung eine Rückkehrsitzung des Benutzers war. [Weitere Informationen](/help/data-views/data-views-usecases.md) | 14. September 2022 |
+| **Berichte zu wiederkehrenden Sitzungen** | Stellen Sie fest, ob es sich bei einer bestimmten Sitzung um die wiederkehrende Sitzung einer Person gehandelt hat. [Weitere Informationen](/help/data-views/data-views-usecases.md) | 14. September 2022 |
 | **Experimentier-Bedienfeld für CJA** | Mit diesem neuen Workspace-Bedienfeld können CJA-Benutzende den Anstieg und die Konfidenz von A/B-Experimenten bewerten, die aus beliebigen Quellen stammen – online, offline, Adobe-Lösungen, Adobe Journey Optimizer und sogar BYO-Daten (bring-your-own). [Weitere Informationen](/help/analysis-workspace/c-panels/experimentation.md) | [Eingeschränkte Veröffentlichung](/help/release-notes/releases.md) ab 14. September 2022 |
-| **Visualisierung von Kombinationsdiagrammen in Workspace** | Mit Kombinationsdiagrammen können Sie Metriken innerhalb von Workspace einfacher und intuitiver vergleichen. [Weitere Informationen](/help/analysis-workspace/visualizations/combo-charts.md) | Schrittweise Einführung ab 14. September 2022 |
+| **Visualisierung von Kombinationsdiagrammen in Workspace** | Mit Kombinationsdiagrammen können Sie Metriken innerhalb von Workspace einfacher und intuitiver vergleichen. [Weitere Informationen](/help/analysis-workspace/visualizations/combo-charts.md) | Schrittweiser Rollout ab 14. September 2022 |
 | **CJA-Unterstützung für Data Governance-Beschriftungen und -Richtlinien** | Automatisiert die Integration zwischen CJA- und Adobe Experience Platform-Datenschutzbezeichnungen und -richtlinien. Datenbeschriftungen, die für von Platform verwendete Datensätze erstellt wurden, werden in CJA-Datenansichten angezeigt, um Benutzer zu stoppen oder zu warnen, die Metriken und/oder Dimensionen aus sensiblen Feldern erstellen. Außerdem, wenn Daten aus CJA exportiert werden (über den Workspace oder Report Builder, Export, API usw.) werden zusätzliche Warnungen oder Kennzeichnungen hinzugefügt, um die Nutzer darauf hinzuweisen, dass ein Bericht sensible Informationen enthält, die auf eine bestimmte Weise behandelt werden müssen. [Weitere Informationen](/help/data-views/data-governance.md) | 14. September 2022 |
 
 {style=&quot;table-layout:auto&quot;}
@@ -52,10 +52,10 @@ AN-298412
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
 | Unterstützung für numerische Felder als Suchschlüssel und Suchwerte | Dies ist nützlich, wenn Sie Zeichenfolgenwerte mit einem numerischen Feld wie COGS oder Marge für eine Produkt-SKU klassifizieren möchten. Wenn Sie Metriken aus der Suche zulassen, können Sie diese Datenpunkte in das Reporting einfließen lassen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/create-connection.html?lang=de#numeric) | 20. Juli 2022 |
-| **Zielgruppenveröffentlichung im Echtzeit-Kundenprofil** | Ermöglicht Ihnen das Veröffentlichen von in Customer Journey Analytics entdeckten Zielgruppen in Adobe Experience Platform/Echtzeit-Kundenprofilen für Kunden-Targeting und Personalisierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/audiences/audiences-overview.html?lang=en) | 5. August 2022 |
+| **Zielgruppenveröffentlichung im Echtzeit-Kundenprofil** | Ermöglicht Ihnen das Veröffentlichen von in Customer Journey Analytics entdeckten Zielgruppen in Adobe Experience Platform/Echtzeit-Kundenprofilen für Kunden-Targeting und Personalisierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/audiences/audiences-overview.html?lang=de) | 5. August 2022 |
 | Bedienfeld „Gleichzeitige Medienbetrachter“ | Erkennen Sie, wo hohe Auslastungen auftraten oder wo es zu Einbrüchen kam. Erhalten Sie wertvolle Einblicke in die Qualität von Inhalten und die Interaktion mit Betrachtern und erhalten Sie Hilfe bei der Fehlerbehebung oder der Planung in Bezug auf Volumen und Skalierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/panels/media-concurrent-viewers.html?lang=de) | **9. August 2022** |
 | Panel „Verbrachte Zeit bei der Medienwiedergabe“ | Die mit Medienwiedergabe verbrachte Zeit bietet wertvolle Einblicke in die Interaktion mit Betrachtenden und ermöglicht es Medienunternehmen, tiefere, detailliertere Einblicke mit der minütigen Benutzerinteraktion durch erweiterte Zeitanalysen mit Funktionen zur Tageszeiteneinteilung zu gewinnen. Sie können feststellen, wie viel Zeit zu einem bestimmten Zeitpunkt mit der Anzeige Ihrer Medien-Streams verbracht wurde. Sie können die Wiedergabedauer nach verschiedenen Granularitäten unterteilen, einschließlich der neuen Granularitäten von 5, 15 und 30 Minuten.  [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/panels/media-playback-timespent/media-playback-time-spent.html?lang=de) | **9. August 2022** |
-| Reporting über neue und wiederholte Sitzungen | Sie können jetzt feststellen, ob es sich bei einer bestimmten Sitzung um die allererste Sitzung einer Person handelte. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/data-views-usecases.html?lang=en#new-repeat) | 17. August 2022 |
+| Reporting über neue und wiederholte Sitzungen | Sie können jetzt feststellen, ob es sich bei einer bestimmten Sitzung um die allererste Sitzung einer Person handelte. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/data-views-usecases.html?lang=de#new-repeat) | 17. August 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -83,7 +83,7 @@ AN-298412
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
 | Dimensions-Teilzeichenfolgen | Bietet mehrere Methoden zum Extrahieren des gewünschten Teils einer Zeichenfolge zur Verwendung als Dimensionselemente. Mit dieser Funktion können Sie eine Zeichenfolgendimension auch als Array behandeln, wenn die Zeichenfolge durch Trennzeichen getrennte Werte enthält. [Weitere Informationen](../data-views/component-settings/substring.md) | 20. April 2022 |
-| Data Prep für den Analytics-Quell-Connector | Der [Analytics-Quell-Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html) ist jetzt in die [Datenvorbereitungsfunktionen](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html?lang=de) von Adobe Experience Platform integriert. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem über 100 Data-Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für ein Profil aktivieren.<p>CJA-Kunden, die mehrere Report Suites über den Analytics-Quell-Connector aufnehmen, können jetzt Spaltenunterschiede zwischen Report Suites beheben. Wenn beispielsweise „Suchbegriff“ in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite gespeichert ist, können Sie mithilfe von Data Prep die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
+| Data Prep für den Analytics-Quell-Connector | Der [Analytics-Quell-Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de) ist jetzt in die [Datenvorbereitungsfunktionen](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html?lang=de) von Adobe Experience Platform integriert. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem über 100 Data-Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für ein Profil aktivieren.<p>CJA-Kunden, die mehrere Report Suites über den Analytics-Quell-Connector aufnehmen, können jetzt Spaltenunterschiede zwischen Report Suites beheben. Wenn beispielsweise „Suchbegriff“ in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite gespeichert ist, können Sie mithilfe von Data Prep die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
